...
  "myIncomes": "My Incomes",
  "searchExpense": "Search expense...",
  "searchIncome": "Search income...",
  "goToToday": "Go to today",
  "recycleBinTooltip": "Recycle Bin",
  "voiceInputTooltip": "Voice Input",
  "homePage": "Home",
  "selectPeriod": "Select Period",
  "year": "Year",
  "month": "Month",
  "allDataUpToDate": "All data is up to date",
  "canRefreshIn": "Can refresh in {seconds}s",
  "@canRefreshIn": {
...
